# coach-conejito

./: .gitignore  CLAUDE.md  GEMINI.md  check_garmin.py  pyproject.toml  readme.md  requirements.txt  test_garth_save.py
docs/: architecture.md  tech_stack_comparison.md
src/: app.py  update_prompt.py
src/modules/: data_manager.py  garmin_client.py  gemini_coach.py
tests/: conftest.py  test_app.py  test_data_manager.py  test_garmin_client.py  test_gemini_coach.py
